# ebs-pricing

./: Makefile  Notes.md  README.md  get_ebs_pricing.py  pyproject.toml
.github/workflows/: update.yml
docs/: aws-cn.ebs_pricing.json  aws-cn.regions.json  aws-iso-b.regions.json  aws-iso.regions.json  aws-us-gov.ebs_pricing.json  aws-us-gov.regions.json  aws.ebs_pricing.json  aws.regions.json  ebs_pricing.json  index.html  last_checked  last_updated
