[tool.poetry]
name = "ebs-pricing"
version = "0.1.0"
description = ""
authors = ["Shinichi Urano"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.18.60"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
